2006-09-06 [wwp]	2.4.0cvs154

	* manual/pl/advanced.xml
	* manual/advanced.xml
	* manual/es/advanced.xml
	* manual/fr/advanced.xml
	* src/prefs_customheader.c
	* src/prefs_filtering_action.c
	* src/foldersel.c
	* src/prefs_summaries.c
	* src/prefs_filtering.c
	* src/account.c
	* src/compose.c
	* src/prefs_summary_column.c
	* src/addr_compl.c
	* src/prefs_actions.c
	* src/prefs_folder_column.c
	* src/ssl_manager.c
	* src/prefs_template.c
	* src/prefs_display_header.c
	* src/prefs_common.h
	* src/prefs_matcher.c
	* src/prefs_common.c
	* src/prefs_toolbar.c
	* src/summaryview.c
	* src/folderview.c
	* src/gtk/gtksctree.c
	* src/gtk/pluginwindow.c
	* src/gtk/progressdialog.c
	* src/gtk/prefswindow.c
		renamed hidden option enable_rules_hint to use_stripes_everywhere
		to make its meaning more obvious (all versions of the manual reflect
		the change).
		added an extra hidden option use_stripes_in_summary to allow
		discarding these stripes in mainwindow's folder and message lists;
		en and fr manuals only are OK towards this.

2006-09-06 [colin]	2.4.0cvs153

	* src/textview.c
		Hide Sylpheed-Claws' internal queue headers
		when showing all headers. They'll be present
		only in Source window.

2006-09-05 [colin]	2.4.0cvs152

	* src/plugins/trayicon/trayicon.c
		Fix crash at exit - we have to disconnect
		our handlers
	* src/plugins/trayicon/libeggtrayicon/eggtrayicon.c
		Update eggtrayicon - patch adapted from a
		patch by Fryderyk Dziarmagowski <freetz@gmx.net>
		on Sylpheed's ML

2006-09-05 [colin]	2.4.0cvs151

	* src/mainwindow.c
	* src/gtk/logwindow.c
		Fix race condition when something writes
		to the log too soon during init. Thanks
		to Fabien Vantard

2006-09-05 [colin]	2.4.0cvs150

	* src/mimeview.c
		Don't select part on right-click either

2006-09-05 [paul]	2.4.0cvs149

	* src/mimeview.c
		completion of previous commit
		Thanks to Colin

2006-09-05 [colin]	2.4.0cvs148

	* src/mimeview.c
		Don't force selection on middle-click, just open
