@@ -1846,3 +1846,4 @@
 ( cvs diff -u -r 1.14.2.38 -r 1.14.2.39 src/plugins/trayicon/trayicon.c;  cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/plugins/trayicon/libeggtrayicon/eggtrayicon.c;  ) > 2.4.0cvs152.patchset
 ( cvs diff -u -r 1.96.2.145 -r 1.96.2.146 src/textview.c;  ) > 2.4.0cvs153.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/pl/advanced.xml;  cvs diff -u -r 1.1.2.27 -r 1.1.2.28 manual/advanced.xml;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/es/advanced.xml;  cvs diff -u -r 1.1.2.12 -r 1.1.2.13 manual/fr/advanced.xml;  cvs diff -u -r 1.16.2.22 -r 1.16.2.23 src/prefs_customheader.c;  cvs diff -u -r 1.1.4.28 -r 1.1.4.29 src/prefs_filtering_action.c;  cvs diff -u -r 1.26.2.27 -r 1.26.2.28 src/foldersel.c;  cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/prefs_summaries.c;  cvs diff -u -r 1.59.2.42 -r 1.59.2.43 src/prefs_filtering.c;  cvs diff -u -r 1.61.2.50 -r 1.61.2.51 src/account.c;  cvs diff -u -r 1.382.2.306 -r 1.382.2.307 src/compose.c;  cvs diff -u -r 1.10.2.13 -r 1.10.2.14 src/prefs_summary_column.c;  cvs diff -u -r 1.27.2.19 -r 1.27.2.20 src/addr_compl.c;  cvs diff -u -r 1.60.2.39 -r 1.60.2.40 src/prefs_actions.c;  cvs diff -u -r 1.1.2.5 -r 1.1.2.6 src/prefs_folder_column.c;  cvs diff -u -r 1.3.2.20 -r 1.3.2.21 src/ssl_manager.c;  cvs diff -u -r 1.12.2.28 -r 1.12.2.29 src/prefs_template.c;  cvs diff -u -r 1.16.2.20 -r 1.16.2.21 src/prefs_display_header.c;  cvs diff -u -r 1.103.2.59 -r 1.103.2.60 src/prefs_common.h;  cvs diff -u -r 1.43.2.43 -r 1.43.2.44 src/prefs_matcher.c;  cvs diff -u -r 1.204.2.99 -r 1.204.2.100 src/prefs_common.c;  cvs diff -u -r 1.30.2.28 -r 1.30.2.29 src/prefs_toolbar.c;  cvs diff -u -r 1.395.2.244 -r 1.395.2.245 src/summaryview.c;  cvs diff -u -r 1.207.2.119 -r 1.207.2.120 src/folderview.c;  cvs diff -u -r 1.1.4.27 -r 1.1.4.28 src/gtk/gtksctree.c;  cvs diff -u -r 1.5.2.35 -r 1.5.2.36 src/gtk/pluginwindow.c;  cvs diff -u -r 1.1.4.17 -r 1.1.4.18 src/gtk/progressdialog.c;  cvs diff -u -r 1.12.2.27 -r 1.12.2.28 src/gtk/prefswindow.c;  ) > 2.4.0cvs154.patchset
+( cvs diff -u -r 1.1.4.6 -r 1.1.4.7 src/gtk//gtksctree.h;  ) > 2.4.0cvs155.patchset
